--- a/index.html
+++ b/index.html
@@ -1,103 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <title>Product Landing Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Tee product Page</title>
 </head>
 <body>
-     <!-- Navigation -->
-<nav class="w3-bar w3-black">
-    <section class="w3-container w3-center w3-content" style="max-width:960">
-    <a href="#home" class="w3-button w3-bar-item">Home</a>
-    <a href="#band" class="w3-button w3-bar-item">Band</a>
-    <a href="#tour" class="w3-button w3-bar-item">Tour</a>
-    <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+  <header id="header">
+      <img id="header-img" src="./images/Logo.png" alt="page logo">
+  <nav id="nav-bar">
+    <ul>
+      <li><a href="#main" class="nav-link">Home</a></li>
+      <li><a href="#product" class="nav-link">Products</a></li>
+      <li><a href="#" class="nav-link">Services</a></li>
+      <li><a href="#" class="nav-link">Contact</a></li>
+    </ul>
+  </nav>
+
+</header>
+<section id="main">
+<div class="container">
+  <div class="header-left">
+    <h1>Drink a Refreshing Tea</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, 
+      sequi quae? Sit sequi necessitatibus neque fuga veritatis natus nihil optio,
+       nulla odit illum laudantium, placeat obcaecati! Id deleniti veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sapiente labore sequi quas minus eos commodi delectus, tenetur autem eligendi molestiae consequuntur perferendis tempora illum expedita consectetur error, ea cum.</p>
+       <br>
+       <a class="btn" href="http://">Vaata täpsemalt</a>
+       
+  </div>
+  <div class="header-right">
+    <video id="video" width="400" height="249" controls>
+      <source src="./images/Tee - 19793.mp4" type="video/mp4">
+      <source src="mov_bbb.ogg" type="video/ogg">
+      Your browser does not support HTML video.
+    </video>
+  </div>
+</div>
 </section>
-  </nav> 
-    <section class="header-container">
-    <header id="header"><h1>Maitsetee lehekülg</h1></header>
-    <p>Meil on väga kvaliteetsed ja looduslikud teed ja teejoogid</p>
-    </section>
-    <!-- Slide Show -->
-<section class="w3-container w3-center w3-content" style="max-width:960">
-    <video width="420" height="340" controls>
-        <source src="./images/Tee - 19793.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
-        Your browser does not support the video tag.
-      </video>
-  </section>
-  
-  <!-- Band Description -->
-  <section class="w3-container w3-center w3-content" style="max-width:960px">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-  </section>
-
-  <section class="w3-container w3-center w3-content" style="max-width:960px">
-    <div class="card">
-        <img src="./images/teacup-2325722_1920.jpg" alt="teacup">
-        <h1>Tee in Cup</h1>
-        <p class="price">$ 2.50</p>
-        <p>See tee on väga kasulik hommikul ärgates väikese saia kõrvale</p>
-        <p><button> Add to Card</button></p>
+<section id="product">
+  <div class="container">
+    <div class="product">
+      <img src="./images/bread-18987_1920.jpg" alt="bread picture" style="width: 100%; height: 180px;">
+      <h2>Tea with Bread</h2>
+      <p class="price">$3.50</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tempore quaerat non amet? Libero culpa voluptatum delectus sapiente ullam quibusdam adipisci at, totam doloremque repellendus quasi blanditiis nulla vel est.</p>
+      <p><button>Add to Cart</button></p>
     </div>
-    <div class="card">
-        <img src="./images/bread-18987_1920.jpg" alt="teacup">
-        <h1>Tee in Cup</h1>
-        <p class="price">$ 3.60</p>
-        <p>Maitsev tee mõnusa väikese saiaga</p>
-        <p><button> Add to Card</button></p>
+    <div class="product">
+      <img src="./images/ginger-1918107_1920.jpg" alt="ginger tea" style="width: 100%; height: 180px;">
+      <h2>Ginger Tea</h2>
+      <p class="price">$2.00</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tempore quaerat non amet? Libero culpa voluptatum delectus sapiente ullam quibusdam adipisci at, totam doloremque repellendus quasi blanditiis nulla vel est.</p>
+      <p><button>Add to Cart</button></p>
     </div>
-    <div class="card">
-        <img src="./images/ginger-1918107_1920.jpg" alt="teacup">
-        <h1>Tee in Cup</h1>
-        <p class="price">$ 2.50</p>
-        <p>Ingveri tee on rahustav ja raviv mida tasub iga päev juua</p>
-        <p><button> Add to Card</button></p>
+    <div class="product">
+      <img src="./images/peppermint-2815679_1920.jpg" alt="Peppermint tea" style="width: 100%; height: 180px;">
+      <h2>Peppermint Tea</h2>
+      <p class="price">$2.00</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tempore quaerat non amet? Libero culpa voluptatum delectus sapiente ullam quibusdam adipisci at, totam doloremque repellendus quasi blanditiis nulla vel est.</p>
+      <p><button>Add to Cart</button></p>
     </div>
-    <div class="card">
-        <img src="./images/peppermint-2815679_1920.jpg" alt="teacup">
-        <h1>Tee in Cup</h1>
-        <p class="price">$ 2.50</p>
-        <p>Piparmünditee on rahustav ja seedimisele hea</p>
-        <p><button> Add to Card</button></p>
-    </div>
-  </section>
+  </div>
+</section>
 
-
-    <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
-    <a href="#"><i class="fa fa-facebook-official"></i></a>
-    <a href="#"><i class="fa fa-pinterest-p"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-flickr"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <p class="w3-medium">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-    </p>
-  </footer>
-    <script>
-        // Automatic Slideshow - change image every 3 seconds
-        var myIndex = 0;
-        carousel();
-        
-        function carousel() {
-          var i;
-          var x = document.getElementsByClassName("mySlides");
-          for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-          }
-          myIndex++;
-          if (myIndex > x.length) {myIndex = 1}
-          x[myIndex-1].style.display = "block";
-          setTimeout(carousel, 3000);
-        }
-        </script>
-
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
