--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header id="header">
-      <img id="header-img" src="./images/Logo.png" alt="page logo">
+      <img id="header-img" src="./images/Logo2.png" alt="page logo">
   <nav id="nav-bar">
     <ul>
       <li><a href="#main" class="nav-link">Home</a></li>
@@ -22,13 +22,11 @@
 <section id="main">
 <div class="container">
   <div class="header-left">
-    <h1>Drink a Refreshing Tea</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, 
-      sequi quae? Sit sequi necessitatibus neque fuga veritatis natus nihil optio,
-       nulla odit illum laudantium, placeat obcaecati! Id deleniti veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sapiente labore sequi quas minus eos commodi delectus, tenetur autem eligendi molestiae consequuntur perferendis tempora illum expedita consectetur error, ea cum.</p>
+    <h1>Enjoy the gifts of Nature</h1>
+    <p>Tea is an aromatic beverage commonly prepared by pouring hot or boiling water over cured or fresh leaves of the Camellia sinensis, an evergreen shrub native to East Asia. But these teas here are taken directly from our local nature, which is clean and fresh in taste and very healthy.</p>
        <br>
        <br>
-       <a class="btn" href="http://">Vaata täpsemalt</a>
+       <a class="btn" href="https://en.wikipedia.org/wiki/Tea">Read More...</a>
        
   </div>
   <div class="header-right">
@@ -36,43 +34,46 @@
   </div>
 </div>
 </section>
-<h2 class="product-text"><< Our Product >></h2>
+
 <section id="product">
+  <h2 class="product-text"><< Our Product >></h2>
+  
   <div class="container">
     <div class="product">
       <img src="./images/bread-18987_1920.jpg" alt="bread picture" style="width: 100%; height: 180px;">
       <h2>Tea with Bread</h2>
       <p class="price">$3.50</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tempore quaerat non amet? Libero culpa voluptatum delectus sapiente ullam quibusdam adipisci at, totam doloremque repellendus quasi blanditiis nulla vel est.</p>
+      <p>Whole wheat bread and green tea makes for an energizing breakfast. Whole wheat and green tea are great <strong> healthy food </strong>choices and can make for a nutritious breakfast. Fruity green tea helps add flavor to whole wheat bread that doesn't have much flavor.</p>
+      <br>
       <p><button>Add to Cart</button></p>
     </div>
     <div class="product">
       <img src="./images/ginger-1918107_1920.jpg" alt="ginger tea" style="width: 100%; height: 180px;">
       <h2>Ginger Tea</h2>
       <p class="price">$2.00</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tempore quaerat non amet? Libero culpa voluptatum delectus sapiente ullam quibusdam adipisci at, totam doloremque repellendus quasi blanditiis nulla vel est.</p>
+      <p>Only the most aromatic ingredients are selected to create this <strong>all-natural drinking experience...</strong>The naturally included <strong>essential oil</strong> in ginger combined with a fresh lemon note makes this very delicious</p>
+      <br>
+      <br>
       <p><button>Add to Cart</button></p>
     </div>
     <div class="product">
       <img src="./images/peppermint-2815679_1920.jpg" alt="Peppermint tea" style="width: 100%; height: 180px;">
       <h2>Peppermint Tea</h2>
       <p class="price">$2.00</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tempore quaerat non amet? Libero culpa voluptatum delectus sapiente ullam quibusdam adipisci at, totam doloremque repellendus quasi blanditiis nulla vel est.</p>
+      <p>Mint tea is a delightful and refreshing way to stay healthy and can help you boost your <strong> immune system, </strong> improve digestion and reduce aches and pains. Native to Europe, peppermint tea and essential oils are readily available and the invigorating menthol flavor makes this tea one of the most popular.</p>
       <p><button>Add to Cart</button></p>
     </div>
   </div>
 </section>
 <h2><< Short Video Introduction >></h2>
-<section id="video-container">
-  <video id="video" width="500" height="349" controls>
+
+<div class="video">
+  <video id="video" width="600" controls>
     <source src="./images/Tee - 19793.mp4" type="video/mp4">
     <source src="mov_bbb.ogg" type="video/ogg">
     Your browser does not support HTML video.
   </video>
-
-</section>
-
-
+</div>
 
 <footer>
 
