--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
   <link rel="icon" href="./images/favikon.png" type="image/gif" sizes="16x16">
-  <title>Tee product Page</title>
+  <title>Tea Product Page</title>
 </head>
 <body>
   <header id="header">
